@@ -33,6 +33,7 @@ Version 1.4.4 - CVS
   - Added status bar to compose window when "Compose In New Window" is used.
   - Fixed issue with user setting display of messages to 0 per page.  Fixes
     bug #960447.
+  - Detect, handle, and warn on LOGINDISABLED from IMAP server.
 
 Version 1.4.3a - 2 June 2004
 ----------------------------
